--- a/clean_duplication.ipynb
+++ b/clean_duplication.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-26T22:24:12.589759Z",
@@ -65,7 +65,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Mississippi</td>\n",
+       "      <td>mississippi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -73,7 +73,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>misssisipppi</td>\n",
+       "      <td>misssisippi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -87,21 +87,26 @@
        "      <th>5</th>\n",
        "      <td>Layton</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Bayton</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           city\n",
-       "0   Mississippi\n",
-       "1   mississippi\n",
-       "2  misssisipppi\n",
-       "3      Misisipi\n",
-       "4        Dayton\n",
-       "5        Layton"
+       "          city\n",
+       "0  mississippi\n",
+       "1  mississippi\n",
+       "2  misssisippi\n",
+       "3     Misisipi\n",
+       "4       Dayton\n",
+       "5       Layton\n",
+       "6       Bayton"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,12 +115,13 @@
     "import pandas as pd\n",
     "df = pd.DataFrame({\n",
     "    \"city\": [\n",
-    "        \"Mississippi\",\n",
     "        \"mississippi\",\n",
-    "        \"misssisipppi\",\n",
+    "        \"mississippi\",\n",
+    "        \"misssisippi\",\n",
     "        \"Misisipi\",\n",
     "        \"Dayton\",\n",
     "        \"Layton\",\n",
+    "        \"Bayton\",\n",
     "    ]\n",
     "})\n",
     "df"
@@ -123,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-26T21:00:47.215625Z",
@@ -134,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f37970f3fded4fb4a03888b0274a02d6",
+       "model_id": "bc4f0468070f4579a5ac3c337fe7850c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,123 +150,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "        var ind = IPython.notebook.get_selected_index();\n",
-       "        var cell = IPython.notebook.get_cell(ind);\n",
-       "        var text = cell.get_text();\n",
-       "        cell.set_text(text.concat(atob(\"CmRmWyJjaXR5Il0gPSBkZlsiY2l0eSJdLnJlcGxhY2UoWyJtaXNzaXNzaXBwaSIsICJtaXNzc2lzaXBwcGkiLCAiTWlzaXNpcGkiXSwgIk1pc3Npc3NpcHBpIik=\")));\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "        var code = IPython.notebook.insert_cell_below('code');\n",
-       "        code.set_text(atob(\"IyBkYXRhZnJhbWUgd2l0aCBjbGVhbmVkIHN0cmluZyB2YWx1ZXMKZGZfY2xlYW4=\"));\n",
-       "        code.execute();\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "clean_duplication(df, \"city\")\n",
-    "# live code export\n",
-    "df[\"city\"] = df[\"city\"].replace([\"mississippi\", \"misssisipppi\", \"Misisipi\"], \"Mississippi\")"
+    "# live code export"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-26T22:24:47.913227Z",
-     "start_time": "2020-08-26T22:24:47.881951Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>city</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Mississippi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Dayton</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Layton</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Bayton</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          city\n",
-       "0  Mississippi\n",
-       "1       Dayton\n",
-       "2       Layton\n",
-       "3       Bayton"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# dataframe with cleaned string values\n",
-    "df_clean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-26T21:00:24.878631Z",
@@ -272,10 +171,9 @@
     "import base64\n",
     "from IPython.display import Javascript, display\n",
     "from ipywidgets import Button, HBox, VBox, Label, Layout, Box, Dropdown, Checkbox, Text\n",
-    "import pandas as pd\n",
     "\n",
     "def live_export_code(*args):\n",
-    "    code = \"\\ndf[\\\"city\\\"] = df[\\\"city\\\"].replace([\\\"mississippi\\\", \\\"misssisipppi\\\", \\\"Misisipi\\\"], \\\"Mississippi\\\")\"\n",
+    "    code = \"\\ndf[\\\"city\\\"] = df[\\\"city\\\"].replace([\\\"mississippi\\\", \\\"misssisippi\\\", \\\"Misisipi\\\"], \\\"Mississippi\\\")\"\n",
     "    encoded_code = (base64.b64encode(str.encode(code))).decode()\n",
     "    display(\n",
     "        Javascript(\"\"\"\n",
@@ -285,8 +183,10 @@
     "        cell.set_text(text.concat(atob(\"{0}\")));\n",
     "    \"\"\".format(encoded_code)))\n",
     "\n",
+    "global gdf\n",
     "\n",
     "def final_df(*args):\n",
+    "    print(gdf)\n",
     "    code = \"# dataframe with cleaned string values\\ndf_clean\"\n",
     "    encoded_code = (base64.b64encode(str.encode(code))).decode()\n",
     "    display(\n",
@@ -297,8 +197,8 @@
     "    \"\"\".format(encoded_code)))\n",
     "\n",
     "\n",
-    "def clean_duplication(*args):\n",
-    "\n",
+    "def clean_duplication(df, col):\n",
+    "    gdf = df\n",
     "    box_layout = Layout(display='flex',\n",
     "                        flex_flow='column',\n",
     "                        align_items='stretch',\n",
@@ -317,7 +217,7 @@
     "                           layout=Layout(width='165px'),\n",
     "                           style={'description_width': 'initial'})\n",
     "\n",
-    "    repr_el = Text(value='Mississippi', layout=Layout(width='130px'))\n",
+    "    repr_el = Text(value='mississippi', layout=Layout(width='130px'))\n",
     "    repr_el2 = Text(value='Bayton', layout=Layout(width='130px'))\n",
     "    sel_all = Checkbox(description=\"Select all\", layout=Layout(width='165px'))\n",
     "\n",
@@ -343,38 +243,44 @@
     "        Label(\"Representative value\")\n",
     "    ])\n",
     "    line = HBox([*[Label(\"_\")] * 100])\n",
-    "    vals_1 = HBox([*spc * 78, Label(\"Mississippi (20 rows)\")])\n",
+    "    vals_1 = HBox([*spc * 78, Label(\"mississippi (2 rows)\")])\n",
     "    vals_2 = HBox([\n",
     "        *spc * 18,\n",
     "        Label(\"4\"), *spc * 31,\n",
     "        Label(\"24\"), *spc * 22,\n",
-    "        Label(\"mississippi (2 rows)\", layout=Layout(width='114px')), check,\n",
+    "        Label(\"misssisippi (1 row)\", layout=Layout(width='114px')), check,\n",
     "        *spc * 8, repr_el\n",
     "    ])\n",
-    "    vals_3 = HBox([*spc * 78, Label(\"misssisipppi (1 row)\")])\n",
     "    vals_4 = HBox([*spc * 78, Label(\"Misisipi (1 row)\")])\n",
-    "    vals_5 = HBox([*spc * 78, Label(\"Bayton (9 rows)\")])\n",
+    "    vals_5 = HBox([*spc * 78, Label(\"Bayton (1 row)\")])\n",
     "    vals_6 = HBox([\n",
     "        *spc * 18,\n",
     "        Label(\"3\"), *spc * 31,\n",
     "        Label(\"24\"), *spc * 22,\n",
-    "        Label(\"Dayton (8 rows)\", layout=Layout(width='114px')), check2,\n",
+    "        Label(\"Dayton (1 row)\", layout=Layout(width='114px')), check2,\n",
     "        *spc * 8, repr_el2\n",
     "    ])\n",
-    "    vals_7 = HBox([*spc * 78, Label(\"Layton (7 row)\")])\n",
+    "    vals_7 = HBox([*spc * 78, Label(\"Layton (1 row)\")])\n",
     "    footer = HBox([sel_all, *spc * 79, merge_and_recluster, *spc * 10, finish])\n",
     "\n",
     "    return Box(children=[\n",
     "        VBox([line,\n",
-    "            dropds, blank, headers, line, vals_1, vals_2, vals_3, vals_4, line,\n",
+    "            dropds, blank, headers, line, vals_1, vals_2, vals_4, line,\n",
     "            vals_5, vals_6, vals_7, line, footer\n",
     "        ])\n",
     "    ],\n",
     "               layout=box_layout)\n",
     "\n",
     "df_clean = pd.DataFrame(\n",
-    "    {\"city\": [\"Mississippi\", \"Dayton\", \"Layton\", \"Bayton\"]})"
+    "    {\"city\": [\"Mississippi\", \"Mississippi\", \"Mississippi\", \"Dayton\", \"Layton\", \"Bayton\"]})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -394,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.0"
   },
   "toc": {
    "base_numbering": 1,
