--- a/clean_text.ipynb
+++ b/clean_text.ipynb
@@ -30,17 +30,15 @@
     "def clean_text(\n",
     "    df: Union[pd.DataFrame, dd.DataFrame],\n",
     "    column: str,\n",
-    "#     lowercase: bool = False,\n",
-    "#     remove_diacritics: bool = True\n",
-    "#     remove_whitespace: bool = True,\n",
-    "#     remove_digits: bool = False,\n",
-    "#     remove_punctuation: bool = False,\n",
-    "#     remove_stopwords: Union[List, bool] = False, # True -> remove, False -> don't, List -> provided\n",
-    "#     remove_text: Optional[str] = None, \"{}\"\n",
+    "    lowercase: bool = False,\n",
+    "    remove_diacritics: bool = True\n",
+    "    remove_whitespace: bool = True,\n",
+    "    remove_digits: bool = False,\n",
+    "    remove_punctuation: bool = False,\n",
+    "    remove_stopwords: Union[List, bool] = False, # True -> remove, False -> don't, List -> provided\n",
+    "    remove_text: Optional[str] = None, \"{}\"\n",
     "    default: bool = True # enable all\n",
     "    include_components = {\"lowercase\": False, \"stopwords\": func()}\n",
-    "    customized\n",
-    "    udf ?\n",
     "):\n",
     "    "
    ]
@@ -51,7 +49,7 @@
    "source": [
     "# Implementation\n",
     "\n",
-    "1. String parsing probably using regular expressions to remove and replace as appropriate\n"
+    "String processing using pandas/dask [str APIs](https://pandas.pydata.org/pandas-docs/stable/user_guide/text.html) or regex as appropriate.\n"
    ]
   },
   {
@@ -80,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.0"
   },
   "toc": {
    "base_numbering": 1,
