add example gif

--- a/clean_duplication.ipynb
+++ b/clean_duplication.ipynb
@@ -25,6 +25,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"clean_duplication.gif\" width=\"750\" align=\"center\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Example"
    ]
   },
@@ -140,7 +147,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc4f0468070f4579a5ac3c337fe7850c",
+       "model_id": "92b65a3594e04acba1428d4cbdfff327",
        "version_major": 2,
        "version_minor": 0
       },
